ajout liens dans navbar mobile

--- a/announcements.html
+++ b/announcements.html
@@ -27,8 +27,7 @@
         <!-- Version tablet-->
         <nav class="tablet navbar navbar-expand justify-content-center d-none d-md-block d-lg-none">
             <div class="container-fluid">
-                <img href="http://127.0.0.1:5500/home.html" src="./public/assets/img/logo_desktop.png" alt="photo de profil" class="logo_desktop">
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <a href="http://127.0.0.1:5500/home.html"><img src="./public/assets/img/logo_desktop.png" alt="photo de profil" class="logo_desktop" /></a>                <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <div class="input-group searchbar_desktop ms-4">
                         <input type="text" class="form-control" placeholder="Recherche" aria-label="Recherche">
                         <span class="input-group-text" id="basic-addon2">
@@ -60,8 +59,7 @@
         <!-- Version desktop -->
         <nav class="desktop navbar navbar-expand d-flex justify-content-center d-none d-lg-block">
             <div class="container-fluid">
-                <img src="./public/assets/img/logo_desktop.png" alt="logo collabgarden" class="logo_desktop">
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <a href="http://127.0.0.1:5500/home.html"><img src="./public/assets/img/logo_desktop.png" alt="photo de profil" class="logo_desktop" /></a>                <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <div class="input-group searchbar_desktop ms-4">
                         <input type="text" class="form-control" placeholder="Recherche" aria-label="Recherche"
                             aria-describedby="basic-addon2">
@@ -282,18 +280,18 @@
             class="navbar navbar-mobile d-md-none bg-white sticky-bottom rounded-4 p-0 mb-10 mx-3 border border-secondary-subtle">
             <div class="container justify-content-center">
                 <ul class="list d-flex flex-nowrap p-0 m-0 ">
-                    <li class="navbar-brand d-flex flex-row mx-2">
+                    <a href="http://127.0.0.1:5500/home.html"><li class="navbar-brand d-flex flex-row mx-2">
                         <div class="flex-row text-center p-0">
                             <i class="bi bi-house fs-1"></i>
                             <p>Accueil</p>
                         </div>
-                    </li>
-                    <li class="navbar-brand d-flex flex-nowrap mx-1">
+                    </li></a>
+                    <a href="http://127.0.0.1:5500/announcements.html"><li class="navbar-brand d-flex flex-nowrap mx-1">
                         <div class="flex-row text-center p-0">
                             <i class="bi bi-card-list fs-1"></i>
                             <p>Annonces</p>
                         </div>
-                    </li>
+                    </li></a>
                     <li class="navbar-brand d-flex flex-nowrap mx-1">
                         <div class="text-center p-0">
                             <i class="bi bi-lightbulb fs-1"></i>
