--- a/home.html
+++ b/home.html
@@ -413,10 +413,11 @@
                 </div>
                 <div class="col-4">
                     <div>Contact</div>
+                    <div>Mentions légales</div>
                 </div>
 
                 <div class="col-4">
-                    <div>Mentions légales</div>
+                    <a href="http://127.0.0.1:5500/producteurs.html"><div>Producteurs</div></a>
                 </div>
 
                 <div class="col-4">
@@ -458,7 +459,7 @@
                     <a href="http://127.0.0.1:5500/announcements.html"><div>ANNONCES</div></a>
                     <div>CONSEILS & JARDIN</div>
                     <div>EVENEMENTS</div>
-                    <div>PRODUCTEURS</div>
+                    <a href="http://127.0.0.1:5500/producteurs.html"><div>PRODUCTEURS</div></a>
                     <hr>
                     <p>Politique de confidentialité</p>
                 </div>
