--- a/map.html
+++ b/map.html
@@ -15,12 +15,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css"
     />
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-      crossorigin=""
-    />
+    <link rel="stylesheet" href="./node_modules/leaflet/dist/leaflet.css" />
     <link rel="stylesheet" href="./public/assets/css/style.css" />
 
     <title>CollabGarden</title>
@@ -191,7 +186,7 @@
 
     <!-- Main -->
     <main>
-      <section class="map container">
+      <section class="container">
         <h1 class="mt-4">Producteurs près de chez vous</h1>
         <div class="row">
           <div class="col-12">
@@ -327,11 +322,7 @@
         </div>
       </div>
     </footer>
-    <script
-      src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-      integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
-      crossorigin=""
-    ></script>
+    <script src="./node_modules/leaflet/dist/leaflet.js"></script>
     <script src="./public/assets/js/script.js"></script>
     <script
       src="https://kit.fontawesome.com/b4f9175766.js"
