--- a/profil.html
+++ b/profil.html
@@ -27,7 +27,7 @@
         <!-- Version tablet-->
         <nav class="tablet navbar navbar-expand justify-content-center d-none d-md-block d-lg-none">
             <div class="container-fluid">
-                <a href="http://127.0.0.1:5500/home.html"><img src="./public/assets/img/logo_desktop.png" alt="photo de profil" class="logo_desktop" /></a>                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <a href="http://127.0.0.1:5500/index.html"><img src="./public/assets/img/logo_desktop.png" alt="photo de profil" class="logo_desktop" /></a>                <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <div class="input-group searchbar_desktop ms-4">
                         <input type="text" class="form-control" placeholder="Recherche" aria-label="Recherche">
                         <span class="input-group-text" id="basic-addon2">
@@ -59,7 +59,7 @@
         <!-- Version desktop -->
         <nav class="desktop navbar navbar-expand d-flex justify-content-center d-none d-lg-block">
             <div class="container-fluid">
-                <a href="http://127.0.0.1:5500/home.html"><img src="./public/assets/img/logo_desktop.png" alt="photo de profil" class="logo_desktop" /></a>                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <a href="http://127.0.0.1:5500/index.html"><img src="./public/assets/img/logo_desktop.png" alt="photo de profil" class="logo_desktop" /></a>                <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <div class="input-group searchbar_desktop ms-4">
                         <input type="text" class="form-control" placeholder="Recherche" aria-label="Recherche"
                             aria-describedby="basic-addon2">
@@ -384,10 +384,10 @@
                 </section>
             </div>
         <nav
-            class="navbar navbar-mobile d-md-none bg-white sticky-bottom rounded-4 p-0 mb-10 mx-3 border border-secondary-subtle">
+            class="navbar navbar-mobile d-md-none bg-white sticky-bottom rounded-4 p-0 mb-10 border border-secondary-subtle">
             <div class="container justify-content-center">
                 <ul class="list d-flex flex-nowrap p-0 m-0 ">
-                    <a href="http://127.0.0.1:5500/home.html"><li class="navbar-brand d-flex flex-row mx-2">
+                    <a href="http://127.0.0.1:5500/index.html"><li class="navbar-brand d-flex flex-row mx-2">
                         <div class="flex-row text-center p-0">
                             <i class="bi bi-house fs-1"></i>
                             <p>Accueil</p>
